--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
   }
 }
